--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma": "0.12.36",
     "karma-angular-filesort": "~0.1.0",
     "karma-jasmine": "~0.3.5",
+    "karma-jasmine-html-reporter": "^0.1.8",
     "karma-ng-html2js-preprocessor": "~0.1.2",
     "karma-phantomjs-launcher": "~0.2.0",
     "lodash": "~3.9.3",
